Removed sensitive data

--- a/src/pages/portfolio/styles.scss
+++ b/src/pages/portfolio/styles.scss
@@ -22,11 +22,12 @@
 
 .div-content > h2{
     text-align: center;
+    color: white;
 }
 
 .lang {
     width: 50vw;
-    color: black;
+    color: white;
     border-radius: 5px;
     transition: transform 0.2s ease;
     &:hover {
