--- a/src/App.scss
+++ b/src/App.scss
@@ -1,20 +1,26 @@
+*{
+   overflow-y: hidden;
+   overflow-x: hidden;
+}
+
+
 nav {
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background: #9d82da;
-    background: -webkit-linear-gradient(to bottom, #bba8e7, #D3CCE3);
-    background: linear-gradient(to bottom, #bba8e7, #D3CCE3);
+    background: primary-color;
+    background: linear-gradient(to bottom, #fca3f3, #a9e4f5);
+    background-color: #1F124B;
     padding-inline: 8px;
     text-align: center;
-    justify-content: center;
     margin-right: 8px;
+    padding-top: 10px;
     border-radius: 8px;
     width: 10%;
 }
 
 .path{
-    width: 60%;
+    width: 100%;
 }
 
 .link {
@@ -22,15 +28,28 @@ nav {
     text-decoration: none;
     padding: 5px;
     border-radius: 8px;
-    margin-bottom: 10px;
-    width: 10vw;
     align-items: center;
+    margin-bottom: 8px;
     display: flex;
     justify-content: center;
+    &:hover {
+        background-color: rgba($color: white, $alpha: .2);
+        color: white;
+    }
 }
 
-.link:hover {
-    color: #8235d98a;
+.openNav {
+    height: 22px;
+    width: 22px;
+    color: white;
+    &:hover {
+        color: #8235d98a;
+        cursor: pointer;
+    }
+}
+
+.navbar{
+    width: auto;
 }
 
 .display {
@@ -38,12 +57,33 @@ nav {
 }
 
 .pages {
-    background: #D3CCE3;
-    background: -webkit-linear-gradient(to bottom, #bba8e7, #D3CCE3);
-    background: linear-gradient(to bottom, #bba8e7, #D3CCE3);
+    background: linear-gradient(to bottom, #fca3f3, #a9e4f5);
     border-radius: 8px;
-    padding: 8px;
-    width: 86%;
-    height: 97vh;
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
     overflow-y: scroll;
+    &::-webkit-scrollbar {
+        width: 5px; /* Set the scrollbar width */
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: #fca3f3; /* Scrollbar color */
+        border-radius: 10px; /* Rounded edges */
+    }
+    &::-webkit-scrollbar-track {
+        background: #a9e4f5; /* Background of the scrollbar track */
+    }
+}
+
+.navDiv {
+    border-radius: 8px;
+    margin-bottom: 200px;
+    margin-top: 0px;
+    padding: 5px;
+    &:hover {
+        cursor: pointer;
+        background-color: rgba($color: white, $alpha: 0.2);
+        display: flex;
+        text-align: center;
+    }
 }
