--- a/src/pages/portfolio/styles.scss
+++ b/src/pages/portfolio/styles.scss
@@ -1,38 +1,30 @@
-.portfolio-image{
-    height: 50vh;
-    overflow: hidden;
-    border-radius: 8px;
-}
-
-.div-lang{
+h4{
+    color: white;
+    background-color: rgba(255, 255, 255, 0.263);
     display: flex;
-    flex-direction: row;
-    background-color: #894ccf6d;
+    backdrop-filter: blur(10px);
+    width: fit-content;
+    word-spacing: normal;
+    padding: 2px 10px;
+    top: 300px;
+    left: auto;
     border-radius: 8px;
-    margin: 10px;
-    padding: 3px;
-    text-align: center;
-    justify-content: center;
-    transition: transform 0.2s ease;
-    &:hover {
-        transform: scale(1.02); // Scales up the div by 10% on hover
-        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.3)
+    box-shadow: 0 0 red inline infinite;
+    transition: all 0.5s ease;
+    &:hover{
+        cursor: url(../../assets/pointer.png) 0 0, auto;
+        >span{
+            cursor: url(../../assets/pointer.png) 0 0, auto;
+            text-decoration: underline;
+            
+        }
+            
+    }
+    &>img{
+        margin-right: 5px;
     }
 }
 
-.div-content > h2{
-    text-align: center;
+.portfolio{
     color: white;
 }
-
-.lang {
-    width: 50vw;
-    color: white;
-    border-radius: 5px;
-    transition: transform 0.2s ease;
-    &:hover {
-        cursor: default;
-        transform: scale(2); // Scales up the div by 10% on hover
-    }
-}
-
